--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://goodwine-server.cba.pl
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=air_good
+DB_USERNAME=airgood1234
+DB_PASSWORD=JaRoSwEmKo&7!1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
